fixing some spacing issues upon resize, centering elements, with good spacing

--- a/src/style.css
+++ b/src/style.css
@@ -82,16 +82,30 @@ body {
   
   #dayOfContainer {
     grid-column: span 10;
-    grid-row: 1/5;
+    grid-row: 1/6;
     display: grid;
     grid-template-columns: repeat(10,10%);
     grid-template-rows: repeat(10,10%);
   }
+  #dayDescription {
+    grid-row: 9/11;
+    grid-column: span 10;
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2%;
+  }
+
   #gifDiv {
     position: relative;
     grid-column: span 10;
     grid-row: 6/11;
+    margin-top: 2%;
   }
+  
+
 }
 
 
@@ -103,12 +117,14 @@ body {
   align-items: center;
   justify-content: center;
   text-wrap:wrap;
+  border-bottom: 1px var(--border-color) solid;
 }
 
 #tempContainer {
   grid-row: 3/9;
   grid-column:span 10;
   display: flex;
+  border-bottom: 1px var(--border-color) solid;
 }
 
 #tempLow, #tempHigh {
@@ -117,6 +133,14 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 32px;
+}
+
+#tempLow {
+  border-right: 1px var(--border-color) solid;  
+}
+
+#tempHigh {
+  border-left: 1px var(--border-color) solid;  
 }
 
 #tempMiddleSection {
